# kwinshutdown

./: CMakeLists.txt  kwinshutdown5.desktop  main.cpp  main.h  shutdownwatcher.cpp  shutdownwatcher.h
